package com.kintoh.domain;

public interface Resource {
    String name();
    String namespace();
}
