package com.kintoh.domain;

public interface Watcher {
    void start();
    void stop();
}
