@startuml

interface "Watcher" as IWatcher {
    - monitor : IMonitor
    - notifiers : List<INotifier>
    - resourceType : Class<T>
    + start() : void
}

interface "Monitor" as IMonitor {
    + check(resource : IResource) : Optional<Event>
}

interface "Resource" as IResource {
    + name() : String
    + namespace() : String
}

interface "Notifier" as INotifier {
    + send(event : Event) : void
}

class Event {
    + timestamp : DateTime
    + severity : String
    + message : String
}

IWatcher o-- IMonitor
IWatcher o-- INotifier

IMonitor ..> IResource
IMonitor ..> Event
INotifier ..> Event
Event --> IResource

@enduml